RESOLVED FIXED94029
[WebGL] OES_vertex_array_object is not correctly un/binding or deleting
https://bugs.webkit.org/show_bug.cgi?id=94029
Summary [WebGL] OES_vertex_array_object is not correctly un/binding or deleting
Dean Jackson
Reported 2012-08-14 16:02:00 PDT
WebGL conformance test suite build: 5a7a067ead6 Tue Aug 7 14:34:42 2012 -0700 WebKit: r125123 on Mountain Lion 12A269 GPU: AMD Radeon HD 6750M 1024 MB (yes, fairly old)
Attachments
Patch (3.82 KB, patch)
2012-08-20 15:29 PDT, Dean Jackson
kbr: review+
Radar WebKit Bug Importer
Comment 1 2012-08-14 16:04:16 PDT
Dean Jackson
Comment 2 2012-08-20 15:18:15 PDT
Original title was conformance/extensions/oes-vertex-array-object.html failing on Apple Mountain Lion
Dean Jackson
Comment 3 2012-08-20 15:29:21 PDT
Kenneth Russell
Comment 4 2012-08-20 15:40:35 PDT
Comment on attachment 159538 [details] Patch Looks fine. r=me
Dean Jackson
Comment 5 2012-08-20 16:34:53 PDT
Note You need to log in before you can comment on or make changes to this bug.